--- a/ashstyle.css
+++ b/ashstyle.css
@@ -113,12 +113,20 @@ https://travishorn.com/responsive-grid-in-2-minutes-with-css-grid-layout-4842a41
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-.city {
-  font-size: 1rem;
+/* .city {
+  font-size: 1.2rem;
   font-weight: 600;
   margin-top: 0;
   padding-bottom: 0;
   margin-bottom: 0;
+} */
+
+.city {
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.4rem;
+  margin-bottom: 0;
+  margin-top: 0.6rem;
 }
 
 .container-page {
@@ -188,5 +196,6 @@ strong {
   font-size: 1.2rem;
   font-weight: 600;
   line-height: 1.4rem;
-  margin-bottom: 0.4rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0rem;
 }
